# MA-iot_esp32

./: .gitignore  aws.ino
iot_arduino/: aws.ino
iot_arduino/aws/: aws.cpp  aws.h  aws.ino  bme680.cpp  bme680.h  cert_prov.py  nvs.cpp  nvs.h  nvs.hpp  setup.cpp  setup.h  tst copy.py  tst.py
iot_arduino/aws/Certificates/test/: cert.pem  private.key  public.key
iot_arduino/aws/rapport/: Rapport.md
iot_espidf/iot/: CMakeLists.txt  sdkconfig  sdkconfig.old  sdkconfig_oe
iot_espidf/iot/components/aws/: CMakeLists.txt  aws.c  aws.h  shadow_demo_helpers.c  shadow_demo_main.c
iot_espidf/iot/components/bme680/: CMakeLists.txt  bme680.h  bme680_platform.c  bme680_platform.h  bme680_task.c  bme680_task.h
iot_espidf/iot/components/i2c/: CMakeLists.txt  esp32_wrapper.c  esp32_wrapper.h
iot_espidf/iot/components/wifi/: CMakeLists.txt  wifi.c  wifi.h
iot_espidf/iot/main/: main.c
